fix table spacing on its own

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -8,7 +8,8 @@ $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
 $base-line-height: 1.5 !default;
 
-$spacing-unit:     16px !default;
+$spacing-unit:     30px !default;
+$table-spacing-unit:     6px !default;
 
 $text-color:       #111 !default;
 $background-color: #fdfdfd !default;
